--- a/Week2_JS/asyn_challenge2/challenge2.html
+++ b/Week2_JS/asyn_challenge2/challenge2.html
@@ -8,78 +8,56 @@
 </head>
 
 <body>
-    <!DOCTYPE html>
-    <html lang="en">
 
-    <head>
-        <meta charset="UTF-8" />
-        <title>Image Loading with Promises</title>
-        <style>
-            .images img {
-                width: 300px;
-                display: block;
-                margin-bottom: 20px;
-            }
-        </style>
-    </head>
+    <div class="images">
+        <img alt="" id="currentImg">
+    </div>
 
-    <body>
+    <script>
+        const imgContainer = document.querySelector('.images')
+        function createImg(imgPath) {
+            return new Promise((resolve, reject) => {
+                const img = document.createElement('img')
+                img.src = imgPath
 
-        <div class="images"></div>
-
-        <script>
-            const imgContainer = document.querySelector('.images');
-            let currentImg;
-
-
-            const wait = function (seconds) {
-                return new Promise(resolve => {
-                    setTimeout(resolve, seconds * 1000);
-                });
-            };
-
-
-            const createImage = function (imgPath) {
-                return new Promise((resolve, reject) => {
-                    const img = document.createElement('img');
-                    img.src = imgPath;
-
-                    img.addEventListener('load', () => {
-                        imgContainer.append(img);
-                        resolve(img);
-                    });
-
-                    img.addEventListener('error', () => {
-                        reject(new Error('Image not found'));
-                    });
-                });
-            };
-
-
-            createImage('img/img-1.jpg')
-                .then(img => {
-                    currentImg = img;
-                    return wait(2);
+                img.addEventListener('load', () => {
+                    imgContainer.appendChild(img)
+                    resolve(img)
                 })
-                .then(() => {
-                    currentImg.style.display = 'none';
-                    return createImage('img/img-2.jpg');
-                })
-                .then(img => {
-                    currentImg = img;
-                    return wait(2);
-                })
-                .then(() => {
-                    currentImg.style.display = 'none';
-                })
-                .catch(err => {
-                    console.error(err.message);
-                });
-        </script>
 
-    </body>
+                img.addEventListener('error', () => {
+                    reject('Image not found')
+                })
+            })
+        }
 
-    </html>
+        const wait = (seconds) => {
+            return new Promise((resolve) => {
+                setTimeout(resolve, seconds * 1000)
+            })
+
+        }
+
+        let currentImg;
+
+        createImg('img/Image 72.png')
+            .then((img) => {
+                currentImg = img
+                return wait(2)
+            })
+            .then(() => {
+                currentImg.style.display = 'none'
+            })
+            .catch((err) => {
+                console.error(err);
+            })
+
+
+
+
+
+
+    </script>
 
 </body>
 
