--- a/Week2_JS/asyn_challenge3/challenge3.html
+++ b/Week2_JS/asyn_challenge3/challenge3.html
@@ -9,99 +9,65 @@
 
 <body>
 
-    <!DOCTYPE html>
-    <html lang="en">
+    <div class="images">
+        <img alt="" id="currentImg">
+    </div>
 
-    <head>
-        <meta charset="UTF-8">
-        <title>Async Await Images</title>
-        <style>
-            .images img {
-                width: 300px;
-                display: block;
-                margin-bottom: 20px;
+    <script>
+        const imgContainer = document.querySelector('.images')
+        function createImg(imgPath) {
+            return new Promise((resolve, reject) => {
+                const img = document.createElement('img')
+                img.src = imgPath
+
+                img.addEventListener('load', () => {
+                    imgContainer.appendChild(img)
+                    resolve(img)
+                })
+
+                img.addEventListener('error', () => {
+                    reject('Image not found')
+                })
+            })
+        }
+
+        const wait = (seconds) => {
+            return new Promise((resolve) => {
+                setTimeout(resolve, seconds * 1000)
+            })
+
+        }
+
+        let currentImg;
+
+
+
+
+        const loadNPause = async () => {
+            try {
+                const img1 = await createImg('img/Image 72.png')
+
+                currentImg = img1
+
+                await wait(2)
+
+                currentImg.style.display = 'none'
+
+                const img2 = await createImg('img/Image 73.png')
+                currentImg = img2
+
+                await wait(2)
+                currentImg.style.display = 'none'
+
+            } catch (err) {
+                console.error(err);
             }
+        }
 
-            .parallel {
-                border: 3px solid teal;
-            }
-        </style>
-    </head>
-
-    <body>
-
-        <div class="images"></div>
-
-        <script>
-            const imgContainer = document.querySelector('.images');
-
-            const wait = function (seconds) {
-                return new Promise(resolve => {
-                    setTimeout(resolve, seconds * 1000);
-                });
-            };
+        loadNPause()
 
 
-            const createImage = function (imgPath) {
-                return new Promise((resolve, reject) => {
-                    const img = document.createElement('img');
-                    img.src = imgPath;
-
-                    img.addEventListener('load', () => {
-                        imgContainer.append(img);
-                        resolve(img);
-                    });
-
-                    img.addEventListener('error', () => {
-                        reject(new Error('Image not found 💥'));
-                    });
-                });
-            };
-
-
-            const loadNPause = async function () {
-                try {
-                    let img = await createImage('img/img-1.jpg');
-                    await wait(2);
-                    img.style.display = 'none';
-
-                    img = await createImage('img/img-2.jpg');
-                    await wait(2);
-                    img.style.display = 'none';
-
-                } catch (err) {
-                    console.error(err.message);
-                }
-            };
-
-
-            const loadAll = async function (imgArr) {
-                try {
-
-                    const imgs = imgArr.map(img => createImage(img));
-                    console.log(imgs);
-
-
-                    const imgElements = await Promise.all(imgs);
-
-                    imgElements.forEach(img => img.classList.add('parallel'));
-
-                } catch (err) {
-                    console.error(err.message);
-                }
-            };
-
-            loadAll([
-                'img/img-1.png',
-                'img/img-2.png',
-                'img/img-3.png'
-            ]);
-        </script>
-
-    </body>
-
-    </html>
-
+    </script>
 
 </body>
 
